Fixed hero image showing double when JS is disabled on the browser. Fix: Made no-js version of image absolute with a higher z-index--this hides the blurred lazysizes version.

--- a/src/styles/modules/_image.scss
+++ b/src/styles/modules/_image.scss
@@ -19,6 +19,7 @@
   # Style
   # Background
   # Caption
+  # Has No JS
 
 */
 
@@ -44,10 +45,6 @@
     margin-left: auto;
     margin-right: auto;
     background-color: $color_neutralMed;
-
-    @include atSmall {
-
-    }
 
   }
 
@@ -143,6 +140,16 @@
     /*colors*/
     color: $color_neutralMed;
 
+  }
+
+  /**************************************/
+  /*   # Has No JS                     */
+  /************************************/
+
+  &--no-js {
+    /*position*/
+    z-index: 5;
+    position: absolute;
   }
 
 }
